--- a/my_tennis_club/members/templates/all_members.html
+++ b/my_tennis_club/members/templates/all_members.html
@@ -5,6 +5,7 @@
 {% endblock  %}
 
 {% block content %}
+    <p><a href="/">Home</a></p>
     <h1>Members</h1>
     <ul>
         {% for x in mymembers %}
